--- a/src/Chat.Dispatcher/Chat.Dispatcher.csproj
+++ b/src/Chat.Dispatcher/Chat.Dispatcher.csproj
@@ -1,14 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Rpc.Core\Rpc.Core.csproj" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.32.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="..\protos\serviceInteraction.proto" GrpcServices="Both" />
   </ItemGroup>
 
 </Project>
