--- a/src/Chat.Dispatcher/appsettings.json
+++ b/src/Chat.Dispatcher/appsettings.json
@@ -8,8 +8,17 @@
   },
   "AllowedHosts": "*",
   "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http2"
+    "Endpoints": {
+      "Grpc": {
+        "Url": "http://0.0.0.0:25565",
+        "Protocols": "Http2"
+      },
+
+      "Webapi": {
+        "Url": "http://0.0.0.0:25566",
+        "Protocols": "Http1"
+      }
     }
-  }
+  },
+  "UseHamachi": false
 }
