--- a/src/Chat.Server/Properties/launchSettings.json
+++ b/src/Chat.Server/Properties/launchSettings.json
@@ -4,6 +4,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
+      "externalUrlConfiguration": true,
       "applicationUrl": "http://0.0.0.0:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
