--- a/src/Chat.Server/appsettings.json
+++ b/src/Chat.Server/appsettings.json
@@ -13,8 +13,16 @@
   },
   "AllowedHosts": "*",
   "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http1AndHttp2"
+    "Endpoints": {
+      "Grpc": {
+        "Url": "http://0.0.0.0:0",
+        "Protocols": "Http2"
+      },
+
+      "Webapi": {
+        "Url": "http://0.0.0.0:0",
+        "Protocols": "Http1"
+      }
     }
   },
   "HubPaths": {
