add: test mq for servers

--- a/src/Chat.Server/appsettings.json
+++ b/src/Chat.Server/appsettings.json
@@ -28,5 +28,11 @@
   "HubPaths": {
     "ChatHub": "/chathub"
   },
-  "DispatcherAddress": "http://localhost:25565"
+  "DispatcherAddress": "http://localhost:25565",
+  "RabbitMq": {
+    "Hostname": "localhost",
+    "Port": 5672,
+    "Username": "guest",
+    "Password": "guest"
+  }
 }
